# WebAppTemplate-Desktop-ZOTS

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  gameyfin-desktop.sh  gameyfin_app.py  org.gameyfin.Gameyfin-Desktop.yaml  python-dependencies.json  requirements.txt  webappcore_app.py
.github/workflows/: flatpak.yml  flutter.yml  (+3 more)
apps/matcha/ERP/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/matcha/ERP/tauri/src-tauri/capabilities/: main.json
apps/matcha/ERP/tauri/src-tauri/icons/: icon.icns
apps/matcha/ERP/tauri/src-tauri/src/: commands.rs  lib.rs  main.rs  navigation.rs  state.rs  storage.rs  window.rs
docs/: ARCHITECTURE.md
flutter-template/: .gitignore  CONTRIBUTING.md  README.md  pubspec.yaml
gameyfin_frontend/: __init__.py  bridge.py  dialogs.py  download_engine.py  prefix_manager.py  settings.py  tray.py  utils.py  workers.py
tauri-template/: README.md  package-lock.json  package.json  vite.config.js
tauri-template/src-tauri/: Cargo.toml  tauri.conf.json
tauri-template/src-tauri/capabilities/: shell.json  wrapped.json
tauri-template/src-tauri/src/: config.rs  lib.rs  main.rs  state.rs  url_validator.rs
tauri-template/src-tauri/src/commands/: connections.rs  session.rs  settings.rs
tauri-template/src-tauri/src/models/: app_settings.rs  mod.rs  saved_connection.rs
tauri-template/src-tauri/src/storage/: connection_store.rs  mod.rs  settings_store.rs
tauri-template/src-tauri/src/webview/: mod.rs  wrapped_window.rs
webappcore/: __init__.py  bridge.py  dialogs.py  download_engine.py  settings.py  tray.py  utils.py  workers.py
(+91 files in other folders)
