[package]
name = "webapp_template_tauri"
version = "0.1.0"
description = "Desktop web app wrapper template"
authors = ["lumotic"]
edition = "2021"

[lib]
name = "webapp_template_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
