[package]
name = "matcha_erp"
version = "0.1.2"
description = "Minimal desktop wrapper for self-hosted ERPNext"
authors = ["lumotic"]
edition = "2021"

[lib]
name = "matcha_erp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-prevent-default = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
